--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -908,7 +908,7 @@ textarea {
     display: flex;
     justify-content: flex-end;
     margin-right: 25px;
-    margin-top: 10px;
+    margin-top: -60px;
 }
 
 .alumnoEntregaTarea_puntaje input {
@@ -975,4 +975,42 @@ input[type="number"]::-webkit-inner-spin-button {
     color: black;
     margin: 5px 0px;
     font-size: 14px;
+}
+
+.contenedor_pdf {
+    margin-bottom: 10px;
+}
+
+.entregarTareaProfesor {
+    display: flex !important;
+    justify-content: center;
+    flex-direction: column !important;
+}
+
+.clificarTareaCss {
+    margin-top: 30px;
+    border-bottom: 1px solid var(--background);
+}
+
+.clificarTareaCss span {
+    font-size: 15px;
+}
+
+.titleCalificarComponent h4 {
+    position: absolute;
+    margin-top: 10px;
+    margin-left: 20px;
+    font-size: 18px;
+}
+
+.contPostAlu {
+    margin-top: 50px;
+    position: relative;
+}
+
+.postAlumcont {
+    position: absolute;
+    top: -30px;
+    font-size: 22px;
+    left: 111px;
 }
