--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -968,13 +968,19 @@ input[type="number"]::-webkit-inner-spin-button {
     background-color: white;
     box-shadow: 0px 0 3px #000000;
     padding: 3px 10px;
+    margin: 10px 0px;
+    border-radius: 5px 0px 5px 5px / 5px 10px 5px 5px;
 }
 
 .notiPostBody p {
     display: flex;
-    color: black;
+    color: red;
     margin: 5px 0px;
     font-size: 14px;
+}
+
+.notiPostBody:hover {
+    background-color: lightgray;
 }
 
 .contenedor_pdf {
