--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1010,7 +1010,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .contPostAlu {
-    margin-top: 50px;
+    margin-top: 20px;
     position: relative;
 }
 
@@ -1019,4 +1019,13 @@ input[type="number"]::-webkit-inner-spin-button {
     top: -30px;
     font-size: 22px;
     left: 111px;
+}
+
+.entregaTareaCont {
+    width: 90%;
+    margin: 20px auto;
+}
+
+.archivoTarea {
+    width: 90%;
 }
