--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -18,10 +18,6 @@ body {
 
 /*CODIGO          INICIO              AuTi*/
 
-.strippedRow:hover {
-    background-color: #cbd5e0;
-}
-
 .linea_border_bottom {
     border-bottom: 1px solid var(--background);
 }
@@ -458,7 +454,6 @@ details {
 }
 
 .previw_archivosPost {
-    width: 390px;
     height: 60px;
     margin: auto;
     padding: 10px;
@@ -582,7 +577,6 @@ details {
 }
 
 .icon_noti p {
-    color: #50b7f5;
     border-bottom: 1px solid var(--colorLetra);
     font-size: 15px;
     text-align: center;
@@ -605,15 +599,13 @@ details {
     color: rgb(0, 0, 0);
     width: 180px;
     z-index: 100;
-    background-color: white;
-    box-shadow: 0px 0 3px #000000;
+    background-color: var(--background);
     text-decoration: none;
     outline: none;
     border-radius: 7px;
     position: absolute;
     margin-top: 19px;
     transform: translateX(-50%);
-    border-radius: 5px 0px 5px 5px / 5px 10px 5px 5px;
 }
 
 .coloricono {
