--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -954,6 +954,7 @@ input[type="number"]::-webkit-inner-spin-button {
     display: flex;
     justify-content: flex-end;
     position: relative;
+    padding: 0;
 }
 
 .menu-card-home:hover {
