--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1134,3 +1134,53 @@ input[type="number"]::-webkit-inner-spin-button {
     font-weight: 600;
     font-size: 18px;
 }
+
+.registroContFiltro {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 15px auto;
+}
+
+.inputFiltrogrande {
+    width: 170px;
+}
+
+.inpuntRegistro {
+    width: 65px;
+    margin-left: 5px;
+}
+
+.btn-lupa-registro {
+    background-color: var(--color);
+    border: none;
+    color: white;
+    border-radius: 7px;
+    width: 40px;
+    cursor: pointer;
+    text-align: center;
+    line-height: 2.5;
+}
+
+.ojoRegistro {
+    margin-right: 20px;
+}
+
+.ojoRegistro i {
+    margin-left: 5px;
+}
+
+.ojoRegistro small {
+    font-size: 18px;
+}
+
+.fechaRegistroComponent {
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.noResultadoRegistroComp {
+    width: 80%;
+    margin: 40px auto;
+    text-align: center;
+}
