--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1164,6 +1164,8 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .ojoRegistro {
     margin-right: 20px;
+    padding-top: 10px;
+    font-size: 16px;
 }
 
 .ojoRegistro i {
