--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1191,3 +1191,12 @@ input[type="number"]::-webkit-inner-spin-button {
     margin: 40px auto;
     text-align: center;
 }
+
+.item-registro {
+    border-bottom: 1px solid var(--background);
+    padding: 15px 20px;
+}
+
+.item-registro:first-child {
+    border-top: 1px solid var(--background);
+}
