--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1201,3 +1201,33 @@ input[type="number"]::-webkit-inner-spin-button {
 .item-registro:first-child {
     border-top: 1px solid var(--background);
 }
+
+.calificacionesCont{
+    display: flex;
+    flex-direction:row;
+    justify-content: space-between;
+    width: 95%;
+    margin:0 auto;
+}
+
+.listadoStyle {
+    text-decoration:none !important;
+}
+.eyeListado{
+    margin:0 50px;
+}
+.contLisCalif{
+    border-bottom: 1px solid var(--background);
+}
+.contLisCalif:first-child{
+    border-top: 1px solid var(--background);
+}
+.calititulo{
+    width: 55%;
+    margin-top:5px;
+    font-size: 17px;
+}
+.calfecha{
+    margin-top:5px;
+    font-size: 14px;
+}
